--- a/app/views/public/pages/filtres/_filtres_prix.html.erb
+++ b/app/views/public/pages/filtres/_filtres_prix.html.erb
@@ -4,15 +4,35 @@
         <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="prixDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-currency-euro"></i>
             <span class="ms-1 d-none d-md-inline">
-            <%= if params[:prixmax].present?
-                    "&lt; #{custom_currency_no_decimals_format(params[:prixmax])}".html_safe
+            <%= if ActiveModel::Type::Boolean.new.cast(params[:en_promotion])
+                  "En promotion"
+                elsif params[:prixmax].present?
+                  "&lt; #{custom_currency_no_decimals_format(params[:prixmax])}".html_safe
                 else
-                    "Prix"
+                  "Prix"
                 end %>
             </span>
         </button>
 
         <ul class="dropdown-menu" aria-labelledby="prixDropdown" style="position: absolute;">
+            <li>
+              <%= button_to "En promotion",
+                  update_filters_path(
+                    slug: params[:slug],
+                    id: params[:id],
+                    taille: params[:taille],
+                    couleur: params[:couleur],
+                    prixmax: nil,
+                    type: params[:type],
+                    en_promotion: true,
+                    from_cabine: params[:from_cabine],
+                    type_produit: params[:type_produit]
+                  ),
+                  class: "dropdown-item #{'fw-bold' if ActiveModel::Type::Boolean.new.cast(params[:en_promotion])}" %>
+            </li>
+
+            <li><hr class="dropdown-divider"></li>
+
             <li>
             <%= button_to "Tous",
                 update_filters_path(
@@ -22,10 +42,11 @@
                     couleur: params[:couleur],
                     prixmax: nil,
                     type: params[:type],
+                    en_promotion: nil,
                     from_cabine: params[:from_cabine],
                     type_produit: params[:type_produit]
                 ),
-                class: "dropdown-item #{'fw-bold' if params[:prixmax].blank?}" %>
+                class: "dropdown-item #{'fw-bold' if params[:prixmax].blank? && !ActiveModel::Type::Boolean.new.cast(params[:en_promotion])}" %>
             </li>
 
             <% @tranches_prix.each do |prix| %>
@@ -39,6 +60,7 @@
                     couleur: params[:couleur],
                     prixmax: prix,
                     type: params[:type],
+                    en_promotion: nil,
                     from_cabine: params[:from_cabine],
                     type_produit: params[:type_produit]
                     ),
