--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -85,8 +85,7 @@
       <div class="col-6 col-md-2">
         <h6 class="fw-bold text-uppercase mb-4 text-light">Légal</h6>
         <ul class="list-unstyled">
-          <li class="mb-2"><%= link_to "Mentions légales", legal_url, class: "text-light text-decoration-none hover-link" %></li>
-          <li class="mb-2"><%= link_to "CGV", cgv_url(subdomain: "shop"), class: "text-light text-decoration-none hover-link" %></li>
+          <li class="mb-2"><%= link_to "Mentions légales & CGV", legal_url, class: "text-light text-decoration-none hover-link" %></li>
         </ul>
       </div>
 
