fix en promotion filtre

--- a/app/views/public/pages/produits.html.erb
+++ b/app/views/public/pages/produits.html.erb
@@ -28,6 +28,7 @@
                 prixmax: nil,
                 taille: nil,
                 type: nil,
+                en_promotion: nil,
                 from_cabine: params[:from_cabine],
                 type_produit: nil
             ),
