fix filter en promotion

--- a/app/views/public/pages/_produits_filtres.html.erb
+++ b/app/views/public/pages/_produits_filtres.html.erb
@@ -26,6 +26,7 @@
                 couleur: params[:couleur],
                 prixmax: params[:prixmax],
                 type: params[:type],
+                en_promotion: params[:en_promotion],
                 format: :turbo_stream, 
                 page: @pagy.next,
                 subdomain: "shop",
@@ -37,6 +38,7 @@
                 couleur: params[:couleur],
                 prixmax: params[:prixmax],
                 type: params[:type],
+                en_promotion: params[:en_promotion],
                 format: :turbo_stream,
                 page: @pagy.next, 
                 q: params[:q]&.to_unsafe_h,
