--- a/app/views/admin/home_admin/_blocLarge.html.erb
+++ b/app/views/admin/home_admin/_blocLarge.html.erb
@@ -39,7 +39,7 @@
               "btn-outline-info"
             ) if current_admin_user.admin? %>
 
-        <%= options_supplementaires_link(root_url(subdomain: "shop"), "bi-house", "Site public", "btn-outline-primary") %>
+        <%= options_supplementaires_link(root_url, "bi-house", "Site public", "btn-outline-primary") %>
         <%= options_supplementaires_link(admin_home_admin_scan_qr_path, "bi-qr-code-scan", "Scan", "btn-primary") %>
 
         <%#= link_to admin_home_admin_scan_qr_path, class: "btn btn-sm btn-primary" do %>
