--- a/app/views/public/pages/contact.html.erb
+++ b/app/views/public/pages/contact.html.erb
@@ -82,7 +82,7 @@
           Réservez un créneau pour découvrir nos collections en boutique, bénéficier de conseils personnalisés 
           ou pour vos essayages. Notre équipe vous accueille dans les meilleures conditions.
         </p>
-        <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form", class: "btn btn-dark btn-lg px-5 public-btn-border-radius" do %>
+        <%= link_to "#{rdv_url}#rdv-form", class: "btn btn-dark btn-lg px-5 public-btn-border-radius" do %>
           <i class="bi bi-calendar-plus me-2"></i>Réserver un rendez-vous
         <% end %>
       </div>
