--- a/app/views/public/pages/la_boutique.html.erb
+++ b/app/views/public/pages/la_boutique.html.erb
@@ -18,6 +18,6 @@
   <h3 class="mb-4 text-light">Prêt à découvrir nos collections ?</h3>
   <div class="d-flex gap-3 justify-content-center flex-wrap">
     <%= cta_button(type: "collections", url: nos_collections_path, variant: "light") %>
-    <%= cta_button(type: "rdv", url: "#{rdv_url(subdomain: "shop")}#rdv-form", variant: "dark", outline: "light") %>
+    <%= cta_button(type: "rdv", url: "#{rdv_url}#rdv-form", variant: "dark", outline: "light") %>
   </div>
 </div>
