--- a/app/views/public/pages/la_boutique/_section_rdv.html.erb
+++ b/app/views/public/pages/la_boutique/_section_rdv.html.erb
@@ -9,7 +9,7 @@
             <p class="text-light opacity-75 mb-4" style="font-size: 1.1rem;">
               Réservez votre créneau et venez découvrir notre univers
             </p>
-            <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
+            <%= link_to "#{rdv_url}#rdv-form",
                 class: "btn btn-sm btn-light px-3 ms-4 me-2 d-inline-flex align-items-center btn-rdv-hover public-btn-border-radius" do %>
               <i class="bi bi-calendar-check me-2"></i>
               <span class="fw-bold text-uppercase small">Prendre rendez-vous</span>
