--- a/app/views/public/pages/le_concept.html.erb
+++ b/app/views/public/pages/le_concept.html.erb
@@ -134,7 +134,7 @@ image2_position: "center top") %>
       <h3 class="mb-4">Prêt à en découvrir plus ?</h3>
       <div class="d-flex gap-3 justify-content-center flex-wrap mb-4">
         <%= cta_button(type: "collections", url: nos_collections_path, variant: "dark", outline: true) %>
-        <%= cta_button(type: "rdv", url: "#{rdv_url(subdomain: "shop")}#rdv-form", variant: "dark") %>
+        <%= cta_button(type: "rdv", url: "#{rdv_url}#rdv-form", variant: "dark") %>
       </div>
     </div>
   </div>
