--- a/app/views/public/pages/legal.html.erb
+++ b/app/views/public/pages/legal.html.erb
@@ -66,7 +66,7 @@ image2: "legal1.webp") %>
             <%= content_article(
               number: 1,
               title: "Application des CGV",
-              content: "Les présentes Conditions Générales de Vente (les « CGV ») sont applicables dès que vous accédez à la Boutique en ligne Autour D'Un Soir URL : https://shop.a1soir.com/ (le « Site Web ») ou passez des commandes par téléphone. Toutefois, les présentes CGV ne s'appliquent pas à tout achat de produits à la Boutique Autour D'Un Soir de Cannes."
+              content: "Les présentes Conditions Générales de Vente (les « CGV ») sont applicables dès que vous accédez à la Boutique en ligne Autour D'Un Soir URL : https://a1soir.com/ (le « Site Web ») ou passez des commandes par téléphone. Toutefois, les présentes CGV ne s'appliquent pas à tout achat de produits à la Boutique Autour D'Un Soir de Cannes."
             ) %>
             
             <%= content_article(
@@ -162,7 +162,7 @@ image2: "legal1.webp") %>
             <%= content_article(
               number: 4,
               title: "Retard de livraison",
-              content: "Au cas où nous serions dans l'impossibilité de respecter le délai de livraison initialement prévu et figurant dans le Courriel de Livraison, nous vous en informerons dès que possible, en indiquant en même temps un nouveau délai de livraison estimé, sans encourir de responsabilité à votre égard, étant toutefois précisé que vous pouvez annuler votre commande si le délai total de livraison dépasse trente (30) jours. Pour annuler votre commande, vous devez nous envoyer un courriel via le formulaire de contact #{link_to "https://shop.a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}. Nous recréditerons alors la carte bancaire utilisé pour passer la commande, dans les quatorze (14) jours de la réception du courriel notifiant son annulation.".html_safe
+              content: "Au cas où nous serions dans l'impossibilité de respecter le délai de livraison initialement prévu et figurant dans le Courriel de Livraison, nous vous en informerons dès que possible, en indiquant en même temps un nouveau délai de livraison estimé, sans encourir de responsabilité à votre égard, étant toutefois précisé que vous pouvez annuler votre commande si le délai total de livraison dépasse trente (30) jours. Pour annuler votre commande, vous devez nous envoyer un courriel via le formulaire de contact #{link_to "https://a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}. Nous recréditerons alors la carte bancaire utilisé pour passer la commande, dans les quatorze (14) jours de la réception du courriel notifiant son annulation.".html_safe
             ) %>
             
             <%= content_article(
@@ -180,7 +180,7 @@ image2: "legal1.webp") %>
             <%= content_article(
               number: 7,
               title: "Contrôle du colis",
-              content: "Nous attirons votre attention sur la nécessité, lors de la réception de votre colis de contrôler son état général. Vous serez responsables du colis et de son contenu lorsqu'il vous aura été remis. En cas de problème (colis ouvert, colis vide, contenu abîmé), vous devez refuser le colis et contacter notre Service Client pour signaler le problème et la raison du refus (service client : #{link_to "https://shop.a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}). Nous vous informons qu'en cas de manquant sans réserve émise, Autour D'Un Soir ne pourra être tenu pour responsable et nous ne pourrons garantir un remboursement.".html_safe
+              content: "Nous attirons votre attention sur la nécessité, lors de la réception de votre colis de contrôler son état général. Vous serez responsables du colis et de son contenu lorsqu'il vous aura été remis. En cas de problème (colis ouvert, colis vide, contenu abîmé), vous devez refuser le colis et contacter notre Service Client pour signaler le problème et la raison du refus (service client : #{link_to "https://a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}). Nous vous informons qu'en cas de manquant sans réserve émise, Autour D'Un Soir ne pourra être tenu pour responsable et nous ne pourrons garantir un remboursement.".html_safe
             ) %>
             
             <%= content_article(
@@ -262,7 +262,7 @@ image2: "legal1.webp") %>
             <%= content_article(
               number: 2,
               title: "Garantie légale de conformité",
-              content: "Vous bénéficiez des garanties légales suivantes : La garantie légale de conformité (articles L.217-4 et suivants du Code de la consommation), Si vos produits sont non conformes (par exemple s'ils ne correspondent pas à la description donnée sur le site ou à votre commande), vous bénéficiez d'un délai de deux ans à compter de la délivrance du bien pour contacter notre Service Clientèle par courriel via le formulaire de contact #{link_to "https://shop.a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}, ou par courrier postal à l'adresse suivante : Autour d'Un Soir, 29 Boulevard Carnot, 06400 Cannes, France, et nous retourner les produits non conformes. Nous vous renverrons alors des produits de remplacement, lorsque ceux-ci sont disponibles. Si nous ne sommes pas en mesure de remplacer les produits non conformes dans un délai de trente (30) jours, vous pouvez : demander un remboursement intégral des produits non conformes ou conserver les produits non conformes et nous demander une réduction d'une partie du prix, qui sera déterminé au cas par cas.".html_safe
+              content: "Vous bénéficiez des garanties légales suivantes : La garantie légale de conformité (articles L.217-4 et suivants du Code de la consommation), Si vos produits sont non conformes (par exemple s'ils ne correspondent pas à la description donnée sur le site ou à votre commande), vous bénéficiez d'un délai de deux ans à compter de la délivrance du bien pour contacter notre Service Clientèle par courriel via le formulaire de contact #{link_to "https://a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}, ou par courrier postal à l'adresse suivante : Autour d'Un Soir, 29 Boulevard Carnot, 06400 Cannes, France, et nous retourner les produits non conformes. Nous vous renverrons alors des produits de remplacement, lorsque ceux-ci sont disponibles. Si nous ne sommes pas en mesure de remplacer les produits non conformes dans un délai de trente (30) jours, vous pouvez : demander un remboursement intégral des produits non conformes ou conserver les produits non conformes et nous demander une réduction d'une partie du prix, qui sera déterminé au cas par cas.".html_safe
             ) %>
             
             <%= content_article(
@@ -346,7 +346,7 @@ image2: "legal1.webp") %>
 
           <%= content_section(id: "commentaires-reclamations", icon: "chat-dots", title: "Commentaires et réclamations") do %>
             <p class="text-light opacity-75">
-              Nous vous invitons à faire des commentaires sur notre service afin que nous puissions continuellement l'améliorer. Notre objectif est de régler les problèmes rapidement et équitablement. Nous vous remercions de nous informer de tous vos commentaires, questions ou réclamations par courriel à notre Service Clientèle via la rubrique « Contact » sur la Boutique en ligne (<%= link_to "https://shop.a1soir.com/contact", contact_path, class: "text-light text-decoration-underline" %>). Vous pouvez également nous appeler au numéro suivant 04 93 45 17 17. Si vous souhaitez déposer une réclamation, indiquez-le clairement. Notre objectif est de répondre à votre réclamation dans un délai de sept (7) jours ouvrés, soit en y apportant une solution, soit en vous indiquant les modalités du traitement de votre réclamation.
+              Nous vous invitons à faire des commentaires sur notre service afin que nous puissions continuellement l'améliorer. Notre objectif est de régler les problèmes rapidement et équitablement. Nous vous remercions de nous informer de tous vos commentaires, questions ou réclamations par courriel à notre Service Clientèle via la rubrique « Contact » sur la Boutique en ligne (<%= link_to "https://a1soir.com/contact", contact_path, class: "text-light text-decoration-underline" %>). Vous pouvez également nous appeler au numéro suivant 04 93 45 17 17. Si vous souhaitez déposer une réclamation, indiquez-le clairement. Notre objectif est de répondre à votre réclamation dans un délai de sept (7) jours ouvrés, soit en y apportant une solution, soit en vous indiquant les modalités du traitement de votre réclamation.
             </p>
           <% end %>
 
@@ -406,7 +406,7 @@ image2: "legal1.webp") %>
             <%= content_article(
               number: 2,
               title: "Contact",
-              content: "Vous pouvez écrire à notre service client via la rubrique « Contacts » sur la Boutique en ligne (#{link_to "https://shop.a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}). Par téléphone du mardi au vendredi de 10h à 12h et de 15h à 19h et le samedi de 10h à 16h au numéro suivant : 04 93 45 17 17.".html_safe
+              content: "Vous pouvez écrire à notre service client via la rubrique « Contacts » sur la Boutique en ligne (#{link_to "https://a1soir.com/contact", contact_path, class: "text-light text-decoration-underline"}). Par téléphone du mardi au vendredi de 10h à 12h et de 15h à 19h et le samedi de 10h à 16h au numéro suivant : 04 93 45 17 17.".html_safe
             ) %>
           <% end %>
         </section>
