--- a/app/views/public/shared/_floating_contact_icons.html.erb
+++ b/app/views/public/shared/_floating_contact_icons.html.erb
@@ -1,5 +1,5 @@
 <div class="floating-contact-icons">
-  <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form", class: "floating-icon-btn", title: "Prendre rendez-vous" do %>
+  <%= link_to "#{rdv_url}#rdv-form", class: "floating-icon-btn", title: "Prendre rendez-vous" do %>
     <i class="bi bi-calendar-check"></i>
   <% end %>
   
