--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -55,8 +55,8 @@
       <div class="col-6 col-md-2">
         <h6 class="fw-bold text-uppercase mb-4 text-light">Services</h6>
         <ul class="list-unstyled">
-          <li class="mb-2"><%= link_to "Produits", produits_index_url(subdomain: "shop"), class: "text-light text-decoration-none hover-link" %></li>
-          <li class="mb-2"><%= link_to "Rendez-vous", rdv_url(subdomain: "shop"), class: "text-light text-decoration-none hover-link" %></li>
+          <li class="mb-2"><%= link_to "Produits", produits_index_url, class: "text-light text-decoration-none hover-link" %></li>
+          <li class="mb-2"><%= link_to "Rendez-vous", rdv_url, class: "text-light text-decoration-none hover-link" %></li>
           <li class="mb-2"><%= link_to "Contact", contact_url, class: "text-light text-decoration-none hover-link" %></li>
           <li class="mb-2"><%= link_to "FAQ", faq_url, class: "text-light text-decoration-none hover-link" %></li>
         </ul>
