--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -14,7 +14,7 @@
 <%#= render partial: "public/pages/section_carousel_collections" %>
 
 <div class="container my-5 py-5 text-center" data-scroll-reveal>
-  <%= link_to "Voir tous les produits", produits_index_url(subdomain: "shop"), class: "btn btn-light btn-lg px-5 public-btn-border-radius" %>
+  <%= link_to "Voir tous les produits", produits_index_url, class: "btn btn-light btn-lg px-5 public-btn-border-radius" %>
 </div>
 
 <%= render partial: "public/pages/home/coups_de_coeur" %>
@@ -24,6 +24,6 @@
   <h3 class="mb-4 text-light">Prêt à découvrir nos collections ?</h3>
   <div class="d-flex gap-3 justify-content-center flex-wrap">
     <%= cta_button(type: "produits", url: produits_index_path, variant: "light") %>
-    <%= cta_button(type: "rdv", url: "#{rdv_url(subdomain: "shop")}#rdv-form", variant: "dark", outline: "light") %>
+    <%= cta_button(type: "rdv", url: "#{rdv_url}#rdv-form", variant: "dark", outline: "light") %>
   </div>
 </div>
