--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag('/images/a1soirlogo2.png', class: 'navbar-logo mb-0 px-2 me-2', alt: "Logo") %>
       <% end %>
 
-      <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
+      <%= link_to "#{rdv_url}#rdv-form",
           class: "btn btn-sm btn-light px-3 ms-4 me-2 d-none d-xxl-flex align-items-center btn-rdv-hover public-btn-border-radius" do %>
         <i class="bi bi-calendar-check me-2"></i>
         <span class="fw-bold text-uppercase small">Prendre rendez-vous</span>
@@ -22,7 +22,7 @@
       <ul class="navbar-nav ms-auto mb-0 p-0 align-items-center gap-2">
         <!-- Bouton RDV dans le menu mobile -->
         <li class="nav-item text-center my-3 d-xxl-none">
-          <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
+          <%= link_to "#{rdv_url}#rdv-form",
               class: "btn btn-light px-4 py-2 d-inline-flex align-items-center justify-content-center btn-rdv-hover public-btn-border-radius" do %>
             <i class="bi bi-calendar-check me-2"></i>
             <span class="fw-bold text-uppercase small">Prendre rendez-vous</span>
