fix filter today availabity on same color or taille products on shop

--- a/app/views/public/shared/_section_categories.html.erb
+++ b/app/views/public/shared/_section_categories.html.erb
@@ -37,7 +37,7 @@
     <%= collection_card(
       title: "Accessoires",
       items: ["Chaussures Homme", "Chaussures Femmes", "Accessoires Hommes", "Accessoires Femmes"],
-      url: produits_filter_url(category_names: ["chaussures", "accessoires"]),
+      url: produits_filter_url(category_names: ["chaussures", "accessoires"]), #TODO: ajouter les accessoires femmes
       image: "cat_accessoires.jpg",
       subtitle: "Complétez votre tenue avec nos chaussures et accessoires soigneusement sélectionnés",
       image_position: "center"
